--- a/index.html
+++ b/index.html
@@ -25,36 +25,49 @@
             <article class="card">
                 <div><img src="./images/849bfede3a5193c34ab8a00379e64fa2 1.png" alt="fondo-batman"></div>
                 <div class="fav"><img src="./images/Vector.png" alt="corazon"></div>
-                <div class="foto-perfil"><img src="./images/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="foto-batman" class="foto-perfil"></div>
+                <img src="./images/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="foto-batman" class="foto-perfil">
                 <div class="texto">
                     <h2>BATMAN</h2>
-                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
                     <button>Ver más</button>
                 </div>
             </article>
     
             <article class="card">
-                <div><img src="./images/849bfede3a5193c34ab8a00379e64fa2 1 (1).png" alt="fondo-harley"></div>
+                <div><img src="./images/fondo-mujer-maravilla.png" alt="fondo-mujer-maravilla" class="fondos"></div>
                 <div class="fav"><img src="./images/Vector.png" alt="corazon"></div>
-                <div class="foto-perfil"><img src="./images/liga-justicia-batman-kO4H--1024x512@abc 1 (1).png" alt="foto-harley" class="foto-perfil"></div>
+                <img src="./images/mujer-maravilla.png" alt="foto-mujer-maravilla" class="foto-perfil">
                 <div class="texto">
-                    <h2>Harley Quinn</h2>
-                    <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
+                    <h2>MUJER MARAVILLA</h2>
+                    <p>Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología griega. En su tierra natal es conocida como la princesa Diana de Temiscira pero fuera de esta utiliza la identidad secreta de Diana Prince. </p>
                     <button>Ver más</button>
                 </div>
             </article>
     
             <article class="card">
-                <div><img src="./images/849bfede3a5193c34ab8a00379e64fa2 1.png" alt="fondo-batman"></div>
+                <div><img src="./images/fondo-superman.png" alt="fondo-superman" class="fondos"></div>
                 <div class="fav"><img src="./images/Vector.png" alt="corazon"></div>
-                <div class="foto-perfil"><img src="./images/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="foto-batman" class="foto-perfil"></div>
+                <img src="./images/foto-superman.png" alt="foto-superman" class="foto-perfil">
                 <div class="texto">
-                    <h2>BATMAN</h2>
-                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                    <h2>SUPERMAN</h2>
+                    <p>Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC Comics. El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio. Lorem ipsum dolor sit, amet lorem ipsum dolor sit.</p>
                     <button>Ver más</button>
-                </div2
+                </div>
+            </article>
+
+            <article class="card" id="no-mobile">
+                <div><img src="./images/fondo-harley.png" alt="fondo-harley"></div>
+                <div class="fav"><img src="./images/Vector.png" alt="corazon"></div>
+                <img src="./images/foto-harley.png" alt="foto-harley" class="foto-perfil">
+                <div class="texto">
+                    <h2>HARLEY QUINN</h2>
+                    <p>Harley Quinn es un personaje ficticio creado por los estadounidenses Paul Dini y Bruce Timm para la editorial DC Comics. Quinn hizo su debut en el vigésimo-segundo episodio de Batman: la serie animada, «El favor del Joker», en septiembre de 1992 y se convirtió en una villana recurrente en la serie. Lorem ipsum dolor sit.</p>
+                    <button>Ver más</button>
+                </div>
             </article>
         </section>
+
+        <!-- <button class="FAB">+</button> -->
     </main>
 
     <footer>
